<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="48dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingTop="32dp"
                android:gravity="center"
                android:text="@string/how_app_works"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="18sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_step_one"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_one_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_one_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_step_two"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_two_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_two_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_step_three"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_three_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_three_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_step_four"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_four_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_four_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_step_five"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_five_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_five_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:lottie_rawRes="@raw/icon_bluetooth"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_six_title"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/step_six_text"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/find_out_more"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/terms_and_conditions"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/btn_green"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/privcy_policy"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/btn_green"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAccessibilityPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/accessibility_policy"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/btn_green"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/license"
                android:textAppearance="@style/RobotoRegular"
                android:textColor="@color/btn_green"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivMzLogo"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:src="@drawable/ministvarstvo_logo_hr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:src="@drawable/design_by_logo" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:src="@drawable/develop_by_apisit" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/home"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="right"
        android:padding="14dp"
        android:src="@drawable/close_icon" />
</FrameLayout>