<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/dark_grey_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/exposure_notification_dialog_title"
        android:textAppearance="@style/RobotoBold"
        android:textColor="@color/white_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="1.5dp"
        android:padding="16dp"
        android:text="@string/exposure_notification_dialog_description"
        android:textAppearance="@style/RobotoRegular"
        android:textColor="@color/white_text_color"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAppearance="@style/RobotoRegular"
            android:textColor="@color/blue_dark"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/turn_on"
            android:textAppearance="@style/RobotoBold"
            android:textColor="@color/blue_dark"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>